add confirmation password to the register form & added icons to the navbar

--- a/frontend/src/components/Auth.css
+++ b/frontend/src/components/Auth.css
@@ -1,9 +1,7 @@
-/* Auth.css */
-.auth-container {
+/* .auth-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* background-color: #45484b; */
   margin-top: 150px;
 }
 
@@ -27,4 +25,4 @@
 
 .auth-form .btn {
   width: 100%;
-}
+} */
