--- a/frontend/src/components/UserProfile.css
+++ b/frontend/src/components/UserProfile.css
@@ -1,3 +1,12 @@
+.user-container {
+  max-width: 50%;
+  margin-left: 25%;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  padding: 20px;
+}
+
 .form-group {
   margin-bottom: 15px;
 }
@@ -24,6 +33,7 @@
   cursor: pointer;
   text-align: center;
   margin-left: 40%;
+  margin-top: 25px;
   transition: background-color 0.3s ease;
 }
 .update-button:hover,
